examples/neg/name-based-implicits/boxed-captures.effekt

def foo(): String = {
  println("Foo")
  "Foo"
}

def requirePureFoo(?foo: () => String at {}): Unit = println(foo())

def main() = {
  requirePureFoo()
}